pick da3f86816 Migrate SourceFileGenerator and all its subclasses to XProcessing.
see: https://github.com/google/dagger/commit/da3f8681620f31b5708618cb92edab5c8bba4300
date: 25 Apr, 2022